authentication and authorization 1

--- a/CarFleetAPI/appsettings.json
+++ b/CarFleetAPI/appsettings.json
@@ -5,5 +5,12 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Jwt": {
+    "Key": "sdfsdfsjdbf78sdyfssdfsdfbuidfs98gdfsdbf",
+    "Issuer": "CarFleetAuthenticationServer",
+    "Audience": "CarFleetServicePostmanClient",
+    "Subject": "CarFleetServiceAccessToken"
+  },
+  
 }
